fix(skin-refresh): ranks 1-6 from audit + REMOVE+ADD_PLAYER bug fix (#121)
* fix(skin-refresh): ranks 1-6 from lib-4 audit + bug fix

Rank 1: Skip-if-unchanged + 100ms debounce per UUID
- Skip setSkin/task when stored skin matches new skin
- Skip server.execute(task) when <100ms since last refresh per UUID

Rank 2: Async IO coalescing for SkinIO.saveSkin
- Single-thread executor + per-UUID dirty coalescing
- saveSkinAsync returns CompletableFuture; sync save delegates + joins
- flushPending on logout, shutdown on server stop

Rank 3: REMOVE+ADD_PLAYER observer refresh (THE BUG FIX)
- Replaces UPDATE_DISPLAY_NAME which serializes 0 texture bytes
- Verified by wire-level GameTest: UPDATE_DISPLAY_NAME = 19 bytes, ADD_PLAYER = 306 bytes

Rank 4: Rate limit via Config
- COOLDOWN_SECONDS (default 3), RATE_LIMIT_ENABLED (default true),
  MAX_COMMANDS_PER_MINUTE (default 5)
- Applied in skinAction after permission check (cooldown + sliding window)

Rank 5: Dimension-targeted broadcastAll
- broadcastAll(packet, targetDimension) for REMOVE + ADD_PLAYER

Rank 6: Remove duplicate/redundant packets
- Drop duplicate sendPlayerPermissionLevel (was sent twice)
- Drop ClientboundChangeDifficultyPacket (sendLevelInfo covers it)
- Drop chunkMap.removeEntity/addEntity (unnecessary with REMOVE+ADD_PLAYER)
- Keep abilities packet: 1.21 sendAllPlayerInfo does NOT include it
- Respawn flag byte 3 -> KEEP_ALL_DATA (4)

GameTests: 8 new tests verify each change (all 19 GameTests pass)

* fix(audit): shutdown-safe SkinIO writer, KEEP_ALL_DATA docs, DIMENSION_SCOPED_BROADCAST toggle

Issue 1: SkinIO static-shutdown hazard
- Writer lazily recreated on null/shutdown (Option B)
- New GameTest ioAsyncWriterSurvivesSecondShutdown: fires ServerStoppingEvent
  twice, verifies async saves still complete

Issue 2: KEEP_ALL_DATA doc error (3, not 4)
- javap -constants: KEEP_ATTRIBUTE_MODIFIERS=1, KEEP_ENTITY_DATA=2,
  KEEP_ALL_DATA=3. Code already used the named constant; comments updated

Issue 3: DIME